--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>In One Line</title>
+  <title>Hephaes</title>
   <style>
     body {
         background-color: darkslategray;
         max-width: 100%;
         font-family: "Mono";
         color: rgb(255, 255, 255);
-        text-align:center
       }
     div.center {text-align:center;}
+    .topBar {
+      text-align: left;
+    }
+    a {color: white;}
     h1   {font-family: "Mono"; color: rgb(255, 255, 255); text-align:center}
     h2   {font-family: "Mono";color: rgb(255, 255, 255); text-align:center}
     h3   {font-family: "Mono";color: rgb(255, 255, 255); text-align:center}
-    p    {font-family: "Mono";color: rgb(255, 255, 255); text-align:center}
-    p.c2    {font-family: "Mono";color: rgb(255, 255, 255); }
+    p    {font-family: "Mono";color: rgb(255, 255, 255);}
+    p.center {text-align:center}
     .instBtn {
       background-color: rgb(100, 100, 100);
       border: none;
@@ -77,41 +80,22 @@
       text-align:center;
       color: white;
     }
+    ol {text-align: left; padding-left: 30%; padding-right: 30%;}
   </style>
 </head>
 <body>
-    <div id="div_main" class="center">
-      <h1>In One Line</h1>
-      <p id="p1">multitool - in a single line of text</p>
-      <hr>
+    <div id="div_main">
+      <p id="topBar">
+        <a href="javascript:ch_page('about');" id="about">About</a> <a href="javascript:ch_page('howToUse');" id="howToUse">How to use it</a>
+      </p>
+      <a href="javascript:ch_page('title');" style="text-decoration:none"><h1 id="title">Hephaes</h1></a>
+      <p id="pMotto" class="center">multitool - in a single line of text</p>
     </div>
       <div id="div_1" class="center">
-        <input id="the-text" name="the-text" type="text" placeholder="You question / command here ...">
-        <br>
+        <input id="theText" name="the-text" type="text" placeholder="You question / command here ...">
+        <br id="b1">
         <button class="bGo" id="btnGo">Go</button>
         <p id="p2"></p>
-        <h3 id="howToUseIt">How to use it:</h3>
-        <table id="infoTb" class="center">
-          <tr><td rowspan="2">Book</td><td>example: </td><td>book lord of the rings</td></tr>
-          <tr><td>to start searching for a book: </td><td>book</td></tr>
-          <tr><td rowspan="11">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr>
-          <tr><td>to start with mathematics: </td><td>=</td></tr>
-          <tr><td>addition: </td><td>+</td></tr>
-          <tr><td>substraction: </td><td>-</td></tr>
-          <tr><td>multiplication: </td><td>*</td></tr>
-          <tr><td>division: </td><td>/</td></tr>
-          <tr><td>exponentiation: </td><td>^</td></tr>
-          <tr><td>n-th root: </td><td>^(1/n)</td></tr>
-          <tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr>
-          <tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr>
-          <tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr>
-        </table>
-        <!--
-          <button class="instBtn" id="btnMathematics">Mathematics</button><br>
-        <button class="instBtn" id="btnWeather">Weather</button><br>
-        <button class="instBtn" id="btnBooks">Books</button><br>
-        -->
-        <p id="p3"></p>
       </div>
       <footer>
         Author:  <a href="https://github.com/heEXDe" target="_blank" style="text-decoration:none">https://github.com/heEXDe</a>
@@ -122,31 +106,48 @@
 //import * as math from 'https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.9.1/math.js'
 
 //eventlisteners
-document.getElementById('btnGo').addEventListener('click', function(){ chooseAction(document.getElementById("the-text").value);});
-// document.getElementById('btnMathematics').addEventListener('click', function(){ ch_page("btnMathematics");});
-// document.getElementById('btnWeather').addEventListener('click', function(){ ch_page("btnWeather");});
-// document.getElementById('btnBooks').addEventListener('click', function(){ ch_page("btnBooks");});
+document.getElementById('btnGo').addEventListener('click', function(){ chooseAction(document.getElementById("theText").value);});
+document.getElementById('about').addEventListener('click', function(){ ch_page("about");});
+document.getElementById('howToUse').addEventListener('click', function(){ ch_page("howToUse");});
 
-/*
-function ch_page(btnPushedName){
-  switch (btnPushedName){
-    case "btnMathematics":
-    p3.innerHTML = "<b>example: = 2*3.12 + 11.5/1.34 </b><br><br> = <br> to start with mathematics <br> + <br> addition <br> - <br> substraction <br> * <br> multiplication <br> / <br> division <br> ^ <br> exponentiation <br> ^(1/n) <br> n-th root <br> _derivative_[variable]_[function (no spaces)] example: = derivative x x^4-x <br> derivative";
+// get & create buttons
+var hHowToUseIt = document.createElement("p");
+var aboutText = document.createElement("p");
+var theText = document.getElementById("theText");
+var btnGo = document.getElementById("btnGo");
+var b1 = document.getElementById("b1");
+var p2 = document.getElementById("p2");
+
+// set inner text
+hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td rowspan=\"12\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>_factorial_[number] <br> example: = factorial 9</td></tr></table></table>";
+aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><ol id=\"olAbout\"><li>open source: <a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">https://github.com/heEXDe/hephaes</a></li><li>Mathematics: basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</li><li>Books: find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">https://openlibrary.org/</a>) database</li></ol>";
+
+// set id for elements
+hHowToUseIt.setAttribute("id", "hHowToUseIt");
+aboutText.setAttribute("id", "aboutText");
+
+function ch_page(eleChoosen){
+  switch (eleChoosen){
+    case "title":
     while (div_1.firstChild) {div_1.removeChild(div_1.firstChild);};
-      div_1.append(tbMath);
+    div_1.append(theText, b1, btnGo, p2);
+    p2.innerText = '';
+    theText.value = '';
     break;
-    case "btnBooks":
-    p3.innerHTML = "<b>example: book lord of the rings </b><br><br> book <br> to start searching for a book <br>";
+    case "about":
+    while (div_1.firstChild) {div_1.removeChild(div_1.firstChild);};
+      div_1.append(aboutText);
     break;
-    case "btnWeather":
-    p3.innerHTML = "<br><br> weather <br> to start searching for weather <br>";
+    case "howToUse":
+    while (div_1.firstChild) {div_1.removeChild(div_1.firstChild);};
+      div_1.append(hHowToUseIt);
     break;
   }
 }
-*/
+
 
 function chooseAction(text){
-  p2.innerHTML = 'Processing';
+  p2.innerHTML = 'Processing ...';
   if (text.charAt(0) == "="){
     mathematics(text);
   } else if (text.split(' ')[0] == "weather"){
@@ -158,34 +159,49 @@ function chooseAction(text){
   }
 }
 
-function mathematics(x){ 
-  //a different method: p2.innerHTML = Function("return " + x.slice(1))();
-  if (x.split(' ')[1] == 'derivative'){
-    p2.innerHTML = math.derivative(x.split(' ')[3], x.split(' ')[2]);
-  } else {
-    p2.innerHTML = math.evaluate(x.slice(1));
+function mathematics(x){
+  switch (x.split(' ')[1]){
+    case 'derivative':
+      p2.innerHTML = math.derivative(x.split(' ')[3], x.split(' ')[2]);
+      break;
+    case 'factorial':
+      p2.innerHTML = math.factorial(x.split(' ')[2]);
+      break;
+    default:
+      p2.innerHTML = math.evaluate(x.slice(1));
   }
 }
 function book(x){
-  let url = `https://openlibrary.org/search.json?q=${x.slice(5)}`; // find the way to replace sapces with %20 string
-  //making the request to the API
-  console.log(url);
+  let a = x.slice(5).trim().replace(' ', '%20');
+  let url = `https://openlibrary.org/search.json?q=${x.slice(5).trim()}`;
+  // the project uses the Open Library API
+  //making a request to the API
   fetch(url)
   .then((response) => response.json())
-  .then((json) => dispRespB(x, json))
-  .catch(function (error){console.error(`Error fetching data: ${error.message}`); p2.innerHTML = `Error`});
+  .then((json) => console.log(json))
+  .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
+  
+  p2.innerHTML = "Results on the OpenLibrary website: <br>" + `<a href=\"https://openlibrary.org/search?q=${a}&mode=everything" target=\"_blank\" style=\"text-decoration:none\">https://openlibrary.org/search?q=${a}&mode=everything</a>`
 }
 function weather(x){ 
-  console.log('weather function');
+  let a = x.slice(8);
+  let url = ``;
+  //making a request to the API
+  fetch(url)
+  .then((response) => response.json())
+  .then((json) => p2.innerHTML = `current weather: ${json}`)
+  .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
 }
+/*
 function dispRespB(x, json){
-  p2.innerHTML = "Results on the OpenLibrary website: <br>" + `<a href=\"https://openlibrary.org/search?q=${x.slice(5)}&mode=everything" target=\"_blank\" style=\"text-decoration:none\">https://openlibrary.org/search?q=${x.slice(5)}&mode=everything</a>`
   console.log(`type of: ${typeof json} and the json: ${json}`);
-  // console.log(`parsed json: ${JSON.parse(json)}`);
+  console.log(json);
+  console.log(json['numFound']);
   // let obj = JSON.parse(json);
   // p2.innerHTML = obj.docs;
-  //p2.innerHTML = String(json.docs);
+  // p2.innerHTML = String(json.docs);
 }
+*/
 </script>
 </html>
 
