--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Hephaes</title>
+  <!-- source of the font: https://www.fontsquirrel.com/fonts/Silkscreen -->
+  <link rel="stylesheet" href="https://ipfs.io/ipfs/QmNvK39Yxm52GsWcJt44CzUE2ESJn2mWhJUbNze13X5dCF?filename=stylesheet.css" type="text/css" charset="utf-8" />
   <style>
     body {
         background-color: darkslategray;
@@ -16,7 +18,7 @@
       text-align: left;
     }
     a {color: white;}
-    h1   {font-family: "Mono"; color: rgb(255, 255, 255); text-align:center}
+    h1   {font-family: "silkscreennormal", Mono; color: rgb(255, 255, 255); text-align:center}
     h2   {font-family: "Mono";color: rgb(255, 255, 255); text-align:center}
     h3   {font-family: "Mono";color: rgb(255, 255, 255); text-align:center}
     p    {font-family: "Mono";color: rgb(255, 255, 255);}
@@ -51,15 +53,16 @@
       margin-left: auto;
       margin-right: auto;
     }
-    th, td {
+    #infoTb td {
       padding: 15px;
-      border: 1px solid white;
-    }
-    #infoTb {
       color: white;
       text-align: center;
       border: 1px solid white;
+      border-radius: 10px;
     }
+    #infoTbBooks {writing-mode: vertical-rl;}
+    #infoTbMathematics {writing-mode: vertical-rl;}
+    #infoTbRandom {writing-mode: vertical-rl;}
     footer {
         display:flex;
         justify-content: center;
@@ -80,7 +83,7 @@
       text-align:center;
       color: white;
     }
-    ol {text-align: left; padding-left: 30%; padding-right: 30%;}
+    ol {text-align: left; padding-left: 20%; padding-right: 20%;}
   </style>
 </head>
 <body>
@@ -119,7 +122,7 @@ var b1 = document.getElementById("b1");
 var p2 = document.getElementById("p2");
 
 // set inner text
-hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td rowspan=\"12\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>_factorial_[number] <br> example: = factorial 9</td></tr></table></table>";
+hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td id=\"infoTbBooks\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td id=\"infoTbMathematics\" rowspan=\"12\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>_factorial_[number] <br> example: = factorial 9</td></tr><tr><td id=\"infoTbRandom\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]</td></tr><tr><td>example: </td><td>random 12</td></tr></table>";
 aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><ol id=\"olAbout\"><li>open source: <a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">https://github.com/heEXDe/hephaes</a></li><li>Mathematics: basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</li><li>Books: find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">https://openlibrary.org/</a>) database</li></ol>";
 
 // set id for elements
@@ -154,6 +157,8 @@ function chooseAction(text){
     weather(text);
   } else if (text.split(' ')[0] == "book"){
     book(text);
+  } else if (text.split(' ')[0] == "random"){
+    randomFn(text);
   } else {
     p2.innerHTML = 'Uncorrect command.'
   }
@@ -191,6 +196,13 @@ function weather(x){
   .then((response) => response.json())
   .then((json) => p2.innerHTML = `current weather: ${json}`)
   .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
+}
+function randomFn(x){
+  let result = '';
+ for (let i=0; i<x.split(' ')[1]; i++){
+  result += 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'.charAt(Math.floor(Math.random() * 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'.length));
+};
+p2.innerHTML = result;
 }
 /*
 function dispRespB(x, json){
