--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
       border: 1px solid white;
       border-radius: 10px;
     }
-    #infoTbBooks {writing-mode: vertical-rl;}
-    #infoTbMathematics {writing-mode: vertical-rl;}
-    #infoTbRandom {writing-mode: vertical-rl;}
+    td.HowToHead {writing-mode: vertical-rl;}
     footer {
         display:flex;
         justify-content: center;
@@ -106,7 +104,6 @@
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.9.1/math.js'></script>
 <script>
-//import * as math from 'https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.9.1/math.js'
 
 //eventlisteners
 document.getElementById('btnGo').addEventListener('click', function(){ chooseAction(document.getElementById("theText").value);});
@@ -122,7 +119,7 @@ var b1 = document.getElementById("b1");
 var p2 = document.getElementById("p2");
 
 // set inner text
-hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td id=\"infoTbBooks\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td id=\"infoTbMathematics\" rowspan=\"12\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>_factorial_[number] <br> example: = factorial 9</td></tr><tr><td id=\"infoTbRandom\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]</td></tr><tr><td>example: </td><td>random 12</td></tr></table>";
+hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"12\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>_factorial_[number] <br> example: = factorial 9</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]</td></tr><tr><td>example: </td><td>random 12</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency USD to EUR</td></tr></table>";
 aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><ol id=\"olAbout\"><li>open source: <a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">https://github.com/heEXDe/hephaes</a></li><li>Mathematics: basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</li><li>Books: find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">https://openlibrary.org/</a>) database</li></ol>";
 
 // set id for elements
@@ -159,6 +156,8 @@ function chooseAction(text){
     book(text);
   } else if (text.split(' ')[0] == "random"){
     randomFn(text);
+  } else if (text.split(' ')[0] == "currency"){
+    curConv(text);
   } else {
     p2.innerHTML = 'Uncorrect command.'
   }
@@ -204,15 +203,16 @@ function randomFn(x){
 };
 p2.innerHTML = result;
 }
-/*
-function dispRespB(x, json){
-  console.log(`type of: ${typeof json} and the json: ${json}`);
-  console.log(json);
-  console.log(json['numFound']);
-  // let obj = JSON.parse(json);
-  // p2.innerHTML = obj.docs;
-  // p2.innerHTML = String(json.docs);
+function curConv(x){
+  let url = `https://api.exchangerate.host/convert?from=${x.split(' ')[1]}&to=${x.split(' ')[3]}`;
+  //making a request to the API
+  fetch(url)
+  .then((response) => response.json())
+  .then((json) => p2.innerHTML = `1 ${x.split(' ')[1]} = ${json["result"]} ${x.split(' ')[3]}`)
+  .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
 }
+/*
+function dispRespB(x, json){}
 */
 </script>
 </html>
