--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ var b1 = document.getElementById("b1");
 var p2 = document.getElementById("p2");
 
 // set inner text
-hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"12\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>_factorial_[number] <br> example: = factorial 9</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]</td></tr><tr><td>example: </td><td>random 12</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency USD to EUR</td></tr></table>";
-aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><ol id=\"olAbout\"><li>open source: <a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">https://github.com/heEXDe/hephaes</a></li><li>Mathematics: basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</li><li>Books: find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">https://openlibrary.org/</a>) database</li></ol>";
+hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"12\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>_factorial_[number] <br> example: = factorial 9</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]</td></tr><tr><td>example: </td><td>random 12</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency USD to EUR</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Unit converter</td><td>to convert unit A to B: <br> (m to in, ft, yd, mi) <br> (in to cm, m)<br> (kg to oz, lb)</td><td>currency_[A]_to_[B]</td></tr><tr><td>example: </td><td>unitconv 5.5 m to in</td></tr></table>";
+aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><ol id=\"olAbout\"><li>open source: <a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">https://github.com/heEXDe/hephaes</a></li><li>Mathematics: basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</li><li>Books: find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">https://openlibrary.org/</a>) database</li><li>Random generator: generate a random string / password</li><li>Currency converter: convert one currency to the other</li><li>Units of measure converter: convert meters, inches and kilograms to pounds, inches, yards, miles, ounces and feet</li></ol>";
 
 // set id for elements
 hHowToUseIt.setAttribute("id", "hHowToUseIt");
@@ -144,9 +144,9 @@ function ch_page(eleChoosen){
     break;
   }
 }
-
-
+// fn to choose the action to perform
 function chooseAction(text){
+  try{
   p2.innerHTML = 'Processing ...';
   if (text.charAt(0) == "="){
     mathematics(text);
@@ -158,11 +158,14 @@ function chooseAction(text){
     randomFn(text);
   } else if (text.split(' ')[0] == "currency"){
     curConv(text);
+  } else if(text.split(' ')[0] == "unitconv"){
+    uniConv(text);
   } else {
-    p2.innerHTML = 'Uncorrect command.'
+    p2.innerHTML = 'Uncorrect command.';
   }
+  } catch {p2.innerHTML = 'Error!';}
 }
-
+// fn to perform mathematical calculations
 function mathematics(x){
   switch (x.split(' ')[1]){
     case 'derivative':
@@ -175,18 +178,13 @@ function mathematics(x){
       p2.innerHTML = math.evaluate(x.slice(1));
   }
 }
+// fn to get a link to search results in the OpenLibrary
 function book(x){
   let a = x.slice(5).trim().replace(' ', '%20');
   let url = `https://openlibrary.org/search.json?q=${x.slice(5).trim()}`;
-  // the project uses the Open Library API
-  //making a request to the API
-  fetch(url)
-  .then((response) => response.json())
-  .then((json) => console.log(json))
-  .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
-  
   p2.innerHTML = "Results on the OpenLibrary website: <br>" + `<a href=\"https://openlibrary.org/search?q=${a}&mode=everything" target=\"_blank\" style=\"text-decoration:none\">https://openlibrary.org/search?q=${a}&mode=everything</a>`
 }
+// fn to get current weather - not working
 function weather(x){ 
   let a = x.slice(8);
   let url = ``;
@@ -196,6 +194,7 @@ function weather(x){
   .then((json) => p2.innerHTML = `current weather: ${json}`)
   .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
 }
+// fn to generate random string / password
 function randomFn(x){
   let result = '';
  for (let i=0; i<x.split(' ')[1]; i++){
@@ -203,6 +202,7 @@ function randomFn(x){
 };
 p2.innerHTML = result;
 }
+// fn to convert one currency to another
 function curConv(x){
   let url = `https://api.exchangerate.host/convert?from=${x.split(' ')[1]}&to=${x.split(' ')[3]}`;
   //making a request to the API
@@ -211,9 +211,38 @@ function curConv(x){
   .then((json) => p2.innerHTML = `1 ${x.split(' ')[1]} = ${json["result"]} ${x.split(' ')[3]}`)
   .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
 }
-/*
-function dispRespB(x, json){}
-*/
+// fn to convert units of measure
+function uniConv(x){
+  try{
+    switch (x.split(' ')[2]){
+    case 'm':
+      switch (x.split(' ')[4]){
+        case 'in': p2.innerHTML = `${x.split(' ')[1]} m = ${(Number(x.split(' ')[1]) * 100 * 39.370) / 100} in`; break;
+        case 'ft': p2.innerHTML = `${x.split(' ')[1]} m = ${(Number(x.split(' ')[1]) * 100 * 3.2808) / 100} ft`; break;
+        case 'yd': p2.innerHTML = `${x.split(' ')[1]} m = ${(Number(x.split(' ')[1]) * 100 * 1.0936) / 100} yd`; break;
+        case 'mi': p2.innerHTML = `${x.split(' ')[1]} m = ${(Number(x.split(' ')[1]) * 100 * 0.00062137) / 100} mi`; break;
+      };
+      break;
+    case 'in':
+    switch (x.split(' ')[4]){
+      case 'cm': p2.innerHTML = `${x.split(' ')[1]} in = ${(Number(x.split(' ')[1]) * 100 / 0.39370) / 100} cm`; break;
+      case 'm': p2.innerHTML = `${x.split(' ')[1]} in = ${(Number(x.split(' ')[1]) * 100 / 39.370) / 100} m`; break;
+    };
+      break;
+    case 'kg':
+    switch (x.split(' ')[4]){
+      case 'lb': p2.innerHTML = `${x.split(' ')[1]} kg = ${(Number(x.split(' ')[1]) * 100 * 2.204623) / 100} lb`; break;
+      case 'oz': p2.innerHTML = `${x.split(' ')[1]} kg = ${(Number(x.split(' ')[1]) * 100 * 35.27396) / 100} oz`; break;
+    };
+      break;
+    default:
+    p2.innerHTML = 'Uncorrect command.';
+  }
+  } catch (error){
+    p2.innerHTML = 'Error.';
+    console.log(error);
+  }
+}
 </script>
 </html>
 
