fonts colors changed ('text-white);

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   h1   {font-family: "silkscreennormal", Mono;}
   </style>
 </head>
-<body class="container-fluid bg-secondary text-center">
+<body class="container-fluid bg-secondary text-center text-white">
   <div>
     <div id="div_main">
       <p id="topBar">
-        <a href="javascript:ch_page('about');" id="about" style="text-decoration:none">About</a> <a href="javascript:ch_page('howToUse');" id="howToUse" style="text-decoration:none">How to use it</a>
+        <a href="javascript:ch_page('about');" id="about" style="text-decoration:none" class="text-white">About</a> | <a href="javascript:ch_page('howToUse');" id="howToUse" style="text-decoration:none" class="text-white">How to use it</a>
       </p>
-      <a href="javascript:ch_page('title');" style="text-decoration:none"><h1>Hephaes</h1></a>
-      <h3 id="pMotto">multitool - in a single line of text</h3>
+      <a href="javascript:ch_page('title');" style="text-decoration:none" class="text-white"><h1>Hephaes</h1></a>
+      <h4 id="pMotto">multitool - in a single line of text</h3>
     </div>
       <div id="div_1">
         <input id="theText" name="the-text" type="text" placeholder="Your question / command here ...">
@@ -44,7 +44,7 @@
       </div>
     </div>
       <footer>
-        <a href="https://github.com/heEXDe/hephaes" target="_blank">
+        <a href="https://github.com/heEXDe/hephaes" target="_blank" class="text-white">
           <i class="fa fa-github fa-3x"></i>
         </a>
       </footer>
